Make show more buttons on projects have aria labels to describe if button says show more or show less and which project it is

--- a/src/index.html
+++ b/src/index.html
@@ -367,6 +367,7 @@
                 <div>
                   <div class="project">
                   <h3>Undercover Elf</h3>
+                  <p aria-hidden="false" class="screen-reader-only">Made using</p>
                   <ul class="project-tech">
                     <li>Javascript,</li>
                     <li>Vue,</li>
@@ -382,6 +383,7 @@
                     id="undercover-elf"
                     aria-expanded="false"
                     class="show-more-button"
+                    aria-label="show more of Undercover Elf project"
                   >
                     Show more
                   </button>
@@ -395,11 +397,6 @@
                         alt="gif showing a demonstration of the Undercover Elf app"
                         class="desktop-gif"
                       />
-                       <img
-                      src="./assets/project-demos/Northcoders-News.gif"
-                      alt="gif showing a demonstration of my Northcoders News site"
-                      class="desktop-gif"
-                    />
                     </div>
                     <div class="project-links">
                       <a href="#" target="_blank">Demo site</a>
@@ -410,6 +407,7 @@
 
                   <div class="project">
                   <h3>Budding</h3>
+                  <p aria-hidden="false" class="screen-reader-only">Made using</p>
                   <ul class="project-tech">
                     <li>JavaScript,</li>
                     <li>React Native,</li>
@@ -431,6 +429,7 @@
                     id="budding"
                     aria-expanded="false"
                     class="show-more-button"
+                    aria-label="show more of Budding project"
                   >
                     Show more
                   </button>
@@ -488,6 +487,7 @@
 
                 <div class="project">
                   <h3>Northcoders News</h3>
+                  <p aria-hidden="false" class="screen-reader-only">Made using</p>
                   <ul class="project-tech">
                     <li>JavaScript,</li>
                     <li>React,</li>
@@ -509,6 +509,7 @@
                     id="nc-news"
                     aria-expanded="false"
                     class="show-more-button"
+                    aria-label="show more of Undercover Elf project"
                   >
                     Show more
                   </button>
