Add updated Undercover Elf demo gif and video

--- a/src/index.html
+++ b/src/index.html
@@ -431,7 +431,11 @@
                     </div>
                     <div class="project-links">
                       <a href="#" target="_blank">Demo site</a>
-                      <a href="" target="_blank">Full stack code</a>
+                      <a
+                        href="https://github.com/thorners55/undercover-elf"
+                        target="_blank"
+                        >Full stack code</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -551,7 +555,11 @@
                       />
                     </div>
                     <div class="project-links">
-                      <a href="#" target="_blank">Live app</a>
+                      <a
+                        href="https://expo.io/@thorners55/projects/budding-app"
+                        target="_blank"
+                        >Live app</a
+                      >
                       <a
                         href="https://github.com/thorners55/budding-back-end"
                         target="_blank"
@@ -565,7 +573,7 @@
                       <a
                         href="https://www.youtube.com/watch?v=llKXad2gF8c&t=242s"
                         target="_blank"
-                        >Demo</a
+                        >Graduation presentation and demo</a
                       >
                     </div>
                   </div>
