Add Undercover Elf demo site link on projects section

--- a/src/index.html
+++ b/src/index.html
@@ -430,7 +430,11 @@
                       />
                     </div>
                     <div class="project-links">
-                      <a href="#" target="_blank">Demo site</a>
+                      <a
+                        href="https://demo.dngg2cj4n9n4p.amplifyapp.com/"
+                        target="_blank"
+                        >Demo site</a
+                      >
                       <a
                         href="https://github.com/thorners55/undercover-elf"
                         target="_blank"
